LIN-4985/LIN-4986 Fix classpath of APT test
Change-Id: I5e229d74f1fd32e2c5039e516705eda85d36527c